--- a/package.json
+++ b/package.json
@@ -116,15 +116,16 @@
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "devtron": "^1.4.0",
     "electron-forge": "^5.2.4",
     "electron-installer-dmg": "^2.0.0",
-    "electron-winstaller": "^3.0.4",
     "electron-prebuilt-compile": "4.0.0",
+    "electron-reload": "^1.4.0",
+    "electron-winstaller": "^3.0.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.12.4",
-    "electron-reload": "^1.4.0"
+    "eslint-plugin-react": "^7.12.4"
   }
 }
